--- a/app/src/main/res/layout/drink_details_activity.xml
+++ b/app/src/main/res/layout/drink_details_activity.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/edit_drink"
+    <TextView
+        android:id="@+id/nameText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="@dimen/min_height"
@@ -14,8 +14,8 @@
         android:layout_margin="@dimen/big_padding"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/edit_drink2"
+    <TextView
+        android:id="@+id/tags"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
@@ -25,8 +25,8 @@
         android:minHeight="@dimen/min_height"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/edit_drink3"
+    <TextView
+        android:id="@+id/category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
@@ -36,8 +36,8 @@
         android:minHeight="@dimen/min_height"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/edit_drink4"
+    <TextView
+        android:id="@+id/alcoholic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
@@ -47,8 +47,8 @@
         android:minHeight="@dimen/min_height"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/edit_drink5"
+    <TextView
+        android:id="@+id/glass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
@@ -58,8 +58,8 @@
         android:minHeight="@dimen/min_height"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/edit_drink6"
+    <TextView
+        android:id="@+id/instructions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
@@ -69,29 +69,17 @@
         android:minHeight="@dimen/min_height"
         android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/edit_drink7"
+    <TextView
+        android:id="@+id/thumbnail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_word"
         android:inputType="textAutoComplete"
-        android:minHeight="@dimen/min_height"
-        android:textSize="18sp" />
+        android:minHeight="@dimen/min_height" />
 
-    <EditText
-        android:id="@+id/edit_drink8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/big_padding"
-        android:fontFamily="sans-serif-light"
-        android:hint="@string/hint_word"
-        android:inputType="textAutoComplete"
-        android:minHeight="@dimen/min_height"
-        android:textSize="18sp" />
-
-    <Button
+    <TextView
         android:id="@+id/saveBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
