--- a/app/src/main/res/layout/activity_drink_edit.xml
+++ b/app/src/main/res/layout/activity_drink_edit.xml
@@ -80,12 +80,21 @@
         android:minHeight="@dimen/min_height" />
 
     <Button
-        android:id="@+id/saveBtn"
+        android:id="@+id/updateBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding"
         android:background="@color/colorPrimary"
-        android:text="@string/button_save"
+        android:text="@string/button_update"
+        android:textColor="@color/buttonLabel" />
+
+    <Button
+        android:id="@+id/exitBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/big_padding"
+        android:background="@color/colorPrimary"
+        android:text="@string/button_exitWithoutSaving"
         android:textColor="@color/buttonLabel" />
 
 </LinearLayout>
