--- a/app/src/main/res/layout/drink_row.xml
+++ b/app/src/main/res/layout/drink_row.xml
@@ -8,6 +8,6 @@
         android:id="@+id/textView"
         style="@style/drink_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:background="@android:color/holo_blue_bright" />
 </LinearLayout>
