--- a/app/src/main/res/layout/ingredient_fragment.xml
+++ b/app/src/main/res/layout/ingredient_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.timer.TimerFragment">
 
     <TextView
-        android:id="@+id/text_timer"
+        android:id="@+id/text_heading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="116dp"
@@ -16,5 +16,15 @@
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="-32dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/drink_row"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_heading" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
