--- a/app/src/main/res/layout/fragment_drink_details.xml
+++ b/app/src/main/res/layout/fragment_drink_details.xml
@@ -15,20 +15,19 @@
         android:minHeight="@dimen/min_height"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginLeft="8dp"/>
 
     <TextView
         android:id="@+id/categoryTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_word"
         android:minHeight="@dimen/min_height"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/nameTV"
-        app:layout_constraintBottom_toBottomOf="@+id/tagsTV"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toTopOf="@+id/tagsTV"
+        android:layout_marginLeft="8dp"/>
 
     <TextView
         android:id="@+id/tagsTV"
@@ -40,33 +39,31 @@
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/categoryTV"
         app:layout_constraintBottom_toTopOf="@+id/glassTV"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginLeft="8dp"/>
 
     <TextView
         android:id="@+id/glassTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="176dp"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_word"
         android:minHeight="@dimen/min_height"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/alcoholicTV"
         app:layout_constraintTop_toBottomOf="@+id/tagsTV"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginLeft="8dp"/>
 
     <TextView
         android:id="@+id/alcoholicTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_word"
         android:minHeight="@dimen/min_height"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/glassTV"
         app:layout_constraintBottom_toTopOf="@+id/instructionsTV"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginLeft="8dp"/>
 
     <TextView
         android:id="@+id/instructionsTV"
@@ -76,8 +73,8 @@
         android:hint="@string/hint_word"
         android:minHeight="@dimen/min_height"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/alcoholicTV"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/alcoholicTV"
+        android:layout_marginLeft="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
