--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_favourites"
+        android:icon="@drawable/ic_favourite_filled_24dp"
+        android:title="@string/title_favourites" />
 
     <item
         android:id="@+id/navigation_recipes"
@@ -18,6 +18,6 @@
 
     <item
         android:id="@+id/navigation_timer"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_baseline_timer_24dp"
         android:title="@string/title_timer" />
 </menu>
